src/objects/VisitScoreResultType__c.object
<CustomObject>
    <fields>
        <fullName>IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResultInPercentage__c</fullName>
        <label>ResultInPercentage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VisitScoreResult__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VisitScoreResult</label>
        <referenceTo>VisitScoreResult__c</referenceTo>
        <relationshipLabel>VisitScoreResultTypes</relationshipLabel>
        <relationshipName>VisitScoreResultTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VisitScoreType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VisitScoreType</label>
        <referenceTo>VisitScoreType__c</referenceTo>
        <relationshipLabel>VisitScoreResultTypes</relationshipLabel>
        <relationshipName>VisitScoreResultTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>VisitScoreResultType</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>rsrt-{00000000}</displayFormat>
        <label>VisitScoreResultType Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VisitScoreResultTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>